MOD (fix) : bunch of minors fix - hide scrollbar [win32] - rearrange menu [multi] - hide latex checkbox [multi]

--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -12,7 +12,7 @@ body, #input, #preview, .spliter { height: 100%; margin: 0; }
   background-color: transparent;
 }
 
-#preview {overflow-y: scroll;}
+#preview {overflow-y: auto;}
 
 #preview .content { padding: 0 10px 0;font-size: 1em; }
 
@@ -28,7 +28,7 @@ body, #input, #preview, .spliter { height: 100%; margin: 0; }
 .resize-wrap {
   width: 100%;
   height: 100%;
-  /*border: 1px brown solid;*/
+  overflow-x: hidden;
   font-size: 30px;
 }
 
@@ -36,7 +36,6 @@ body, #input, #preview, .spliter { height: 100%; margin: 0; }
   width: 50%;
   height: 100%;
   padding: 0px;
-  /*background-color: coral;*/
   display: inline-block;
   float: left;
   position: relative;
